feat: Normalize productscatalog search response
